--- a/README
+++ b/README
@@ -20,7 +20,10 @@ DESCRIPTION
     minimal markup language similar to the syntax used in Kwiki wikis.
 
 MARKUP SYNTAX
-    Spork markup is like Kwiki markup.
+    NOTE: The current syntax has changed in a non-backwards-compatible way
+    as of release 0.16. This was done to keep pace with current Kwiki
+    formatting rules. The main change is the markup for images. Please
+    update old slideshows accordingly.
 
   Slides
     Slides are separated by lines consisting entirely of four or more
@@ -153,16 +156,15 @@ CUSTOMIZATION
     You can easily extend and customize Spork by writing subclasses and
     putting them in the configuration or by fiddling with the template
     files. This version uses Template Toolkit templates by default.
+    HTML::Mason support is being developed by Dave Rolsky.
 
 SEE ALSO
-    Kwiki, Spoon
+    Kwiki, Spoon, Spork::Template::Mason
 
 AUTHOR
-    Ingy döt Net <ingy@cpan.org>
+    Brian Ingerson <INGY@cpan.org>
 
 COPYRIGHT
-    Copyright (c) 2011. Ingy döt Net. All rights reserved.
-
     Copyright (c) 2004, 2005. Brian Ingerson. All rights reserved.
 
     This program is free software; you can redistribute it and/or modify it
